# automl

./: .gitignore  Dockerfile  Makefile  README.md  devcontainer.json  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: All_together.ipynb  Data+Model.ipynb  Models.ipynb  example.ipynb  feature_selection_example.ipynb
src/automl/: loggers.py  main.py  type_hints.py
src/automl/feature_processing/: pipe.py  selectors.py  transformers.py  utils.py
src/automl/feature_processing/feature_selection/: base_model_selector.py  selectors.py
src/automl/feature_selection/: FeatureSelection.py  Preprocessing.py  README.md  pipe.py  selectors.py  transformers.py  utils.py
src/automl/metrics/: __init__.py  functions.py
src/automl/metrics/custom_metrics/: base.py  classification_metrics.py  regression_metrics.py
src/automl/model/: __init__.py  base_model.py  blender.py  constants.py  loggers.py  main.py  models_lists.py
src/automl/model/catboost/: catboost.py  metrics.py
src/automl/model/lama/: __init__.py  default_lama.py  nn_lama.py
src/automl/model/lightgbm/: lightgbm copy.py  lightgbm.py  metrics.py  objectives.py
src/automl/model/linear/: __init__.py  linear.py
src/automl/model/metrics/: __init__.py  base.py  classification_metrics.py  regression_metrics.py
src/automl/model/sklearn/: base.py  forests.py  linear.py
src/automl/model/sklearn_forests/: __init__.py  extra_forests.py  random_forests.py
src/automl/model/utils/: __init__.py  context_managers.py  conversions.py  model_utils.py  optuna_utils.py
src/automl/model/xgboost/: metrics.py  xgboost.py
src/automl/utils/: model_utils.py  utils.py
tests/feature_selection/: test_nan_feature_selector.py  test_object_columns_selector.py  test_pearson_corr_feature_selector.py  test_qconstant_feature_selector.py  test_spearman_corr_feature_selector.py
tests/metrics/: test_classification_metrics.py  test_metrics.py
tests/model/: binary_test.py  categorical_test.py  categorical_test_reg.py  multiclass_test.py  regression_test.py  time_series_binary_test.py  time_series_reg_test.py
tests/models/: test_model.py  test_models.py  utils.py
tests/models/catboost/: test_catboost.py
tests/models/lightgbm/: test_lightgbm.py
tests/models/xgboost/: test_xgboost.py
