[project]
name = "automl"
version = "0.1.0"
description = "sber drkb automl"
authors = [
    {name = "Aleksandr Ivanov", email = "alex.iv.vad@gmail.com"},
]
dependencies = [
    "polars>=1.12.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
jupyter = ["ipykernel"]
dev = [
    "opendatasets",
    "kaggle>=1.6.17",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


