[project]
name = "automl"
version = "0.1.0"
description = "sber drkb automl"
authors = [
    {name = "Aleksandr Ivanov", email = "alex.iv.vad@gmail.com"},
]
dependencies = [
    "polars>=1.12.0",
    "pandas<=2.0.0",
    "scikit-learn>=1.5.2",
    "optuna>=4.0.0",
    "catboost>=1.2.7",
    "lightgbm>=3.2.1",
    "xgboost>=2.1.2",
    "lightautoml>=0.4.0",
    "numpy<2.0.0",
    "transformers>=4.46.1",
    "gensim>=4.3.3",
    "nltk>=3.9.1",
    "feature-engine>=1.6.2",
    "numba>=0.60.0",
    "nbformat>=4.2.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = "docs *.egg-info .git appdir .tox"
python_files = [
    "test_*.py",
]
addopts = "-n auto --disable-warnings"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "kaggle>=1.6.17",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "clearml>=1.16.5",
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
]
